# fastapi-blended-16-06

./: README.md  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/versions/: 8402259a2815_create_table_users.py  fe6a816e1a3b_create_workout_exercise.py
src/: main.py  models.py  schemas.py
src/configuration/: database.py
src/repositories/: exercise_crud.py  user_crud.py  workout_crud.py
src/routes/: exercise_routes.py  user_routes.py  workout_routes.py
